# project-helper

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/analyzers/: __init__.py  project_report_builder.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/services/: analysis_service.py  codebase_tools.py  event_bus.py  llm_client.py  repo_manager.py  repo_url.py
backend/tests/: test_analysis_api.py  test_chat_api.py  test_project_report_builder.py  test_repo_manager.py  test_repo_url.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  styles.css
frontend/src/components/: ChatPanel.vue  ProgressPanel.vue  ProjectList.vue  RepoInputPanel.vue  ReportViewer.vue
frontend/src/utils/: report.js
frontend/tests/: report.spec.js
