[project]
name = "project-helper-backend"
version = "0.1.0"
description = "Backend for project-helper"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic-settings>=2.3.4",
  "httpx>=0.27.0",
  "aiosqlite>=0.20.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "python-dotenv>=1.0.1",
  "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
